# ta1-geopackage

./: .gitignore  .gitmodules  Makefile  README.md  conftest.py  create-diagram.py  pyproject.toml
.github/workflows/: ci.yaml
criticalmaas/ta1_geopackage/: __init__.py  schemas.py  test_create_geopackage.py  test_geopandas.py  test_page_extractions.py  test_utils.py
criticalmaas/ta1_geopackage/fixtures/: 02-defs.sql  03-tables.sql
criticalmaas/ta1_geopackage/procedures/: update-srid.sql
criticalmaas/ta1_geopackage_io/: test_create_geopackage.py
diagram/: schema-diagram.dot  schema-diagram.gpkg
schema/: 02-defs.sql  03-tables.sql  ta1-geopackage-schema.sql
